--- a/templates/zegar.html
+++ b/templates/zegar.html
@@ -30,6 +30,7 @@
         <div class="hand hour" id="hourHand"></div>
         <div class="hand minute" id="minuteHand"></div>
         <div class="center"></div>
+      <div class="clock-inner" id="clockInner"></div>
       </div>
       <div class="seconds-display" id="secondsDisplay">Seconds: 00</div>
     </div>
