--- a/templates/zegar.html
+++ b/templates/zegar.html
@@ -15,13 +15,15 @@
     <div class="timezone-container">
       <label for="timezoneSelect">Analog Clock Timezone:</label>
       <select id="timezoneSelect" class="timezoneSelect" onchange="handleTimezoneChange()">
-        <option value="local">Local Time</option>
+        <option value="local" selected>Local Time</option>
         <option value="America/New_York">New York</option>
         <option value="Europe/London">London</option>
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="Australia/Sydney">Sydney</option>
       </select>
-      <input type="text" id="customTimezone" placeholder="Wpisz własną strefę" onblur="addCustomTimezone()" />
+      <label for="customTimezoneField">Type your location:</label>
+      <input type="text" id="customTimezoneField" placeholder="Enter custom location"/>
+      <button id="customTimezoneButton" onclick="addCustomTimezone()">Confirm custom location</button>
     </div>
     <div class="clock-container">
       <div class="clock" id="clock">
