--- a/templates/zegar.html
+++ b/templates/zegar.html
@@ -20,6 +20,8 @@
         <option value="Europe/London">London</option>
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="Australia/Sydney">Sydney</option>
+        <option value="Asia/Tokyo">Kyoto</option>
+        <option value="Asia/Tokyo">Nara</option>
       </select>
       <label for="customTimezoneField">Type your location:</label>
       <input type="text" id="customTimezoneField" placeholder="Enter custom location"/>
@@ -44,6 +46,8 @@
       <div class="timezone" id="londonTime">London: --:--:--</div>
       <div class="timezone" id="tokyoTime">Tokyo: --:--:--</div>
       <div class="timezone" id="sydneyTime">Sydney: --:--:--</div>
+      <div class="timezone" id="kyotoTime">Kyoto: --:--:--</div>
+      <div class="timezone" id="naraTime">Nara: --:--:--</div>
     </div>
   </div>
   <script src="static/Scripts/clock_script.js"></script>
